syntax = "proto3";

package persistence_sdk.modules.assets.internal.queries.asset;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "github.com/persistenceOne/persistenceSDK/modules/assets/internal/queries/asset";

message QueryRequest {
  string asset_i_d = 1 [(gogoproto.customtype) = "github.com/persistenceOne/persistenceSDK/schema/types.ID", (gogoproto.nullable) = false];
}

message QueryResponse {
  bool success = 1;
  string error = 2;
  repeated string list = 3 [(gogoproto.customtype) = "github.com/persistenceOne/persistenceSDK/schema/helpers.Mappable", (gogoproto.nullable) = false];
}

service Query {
  rpc Asset(QueryRequest) returns (QueryResponse) {
    option (google.api.http).get = "/cosmos/staking/v1beta1/validators";
  }
}