syntax = "proto3";

package persistence_sdk.modules.classifications.internal.queries.classification;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "github.com/persistenceOne/persistenceSDK/modules/classifications/internal/queries/classification";

message QueryRequest {
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.equal) = false;

  string classification_i_d = 1 [(gogoproto.customtype) = "github.com/persistenceOne/persistenceSDK/schema/types.ID", (gogoproto.nullable) = false, (gogoproto.moretags) = "valid:\"required~required ClassificationID missing\""];
}

message QueryResponse {
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.equal) = false;

  bool success = 1;
  string error = 2 ;
  repeated string list = 3 [(gogoproto.customtype) = "github.com/persistenceOne/persistenceSDK/schema/helpers.Mappable", (gogoproto.nullable) = false] ;

}

service Query {
  rpc Classification(QueryRequest) returns (QueryResponse) {
    option (google.api.http).get = "/persistence/classifications/classification";
  }
}